# flet-android-permission

./: pyproject.toml
src/: ejemplo_permisos2.py  main.py  video.py
