[project]
name = "ejemplos-practicos"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.27.6",
  "flet-permission-handler==0.1.0"
]

[tool.flet]
org = "com.mycompany"
product = "ejemplos-practicos"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}

[tool.flet.android]
min_sdk_version = 30
target_sdk_version = 34
split_per_abi = true
dependencies = [
  "flet==0.27.6",
  "flet-permission-handler==0.1.0"
]

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.READ_MEDIA_IMAGES" = true
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_AUDIO" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

